# AE4S15

./: .gitignore
lpc_chip_11cxx_lib/: .cproject
lpc_chip_11cxx_lib/inc/: i2c_11xx.h
lpc_chip_11cxx_lib/src/: i2c_11xx.c
nxp_lpcxpresso_11c24_board_lib/: .cproject
nxp_lpcxpresso_11c24_freertos_blinky/: .cproject
nxp_lpcxpresso_11c24_periph_adc/: .cproject
nxp_lpcxpresso_11c24_periph_blinky/: .cproject
nxp_lpcxpresso_11c24_periph_bod/: .cproject
nxp_lpcxpresso_11c24_periph_ccan_rom/: .cproject
nxp_lpcxpresso_11c24_periph_clkout/: .cproject
nxp_lpcxpresso_11c24_periph_i2c/: .cproject
nxp_lpcxpresso_11c24_periph_pinint/: .cproject
nxp_lpcxpresso_11c24_periph_ssp/: .cproject
nxp_lpcxpresso_11c24_periph_uart/: .cproject
nxp_lpcxpresso_11c24_periph_uart/example/src/: uart.c
nxp_lpcxpresso_11c24_periph_watchdog/: .cproject
nxp_lpcxpresso_11c24_periph_watchdog/example/src/: watchdog.c
telecommand/: .project
telecommand/inc/: buffer.h  ci.h  clcw.h  cltu.h  code_block.h  coding_layer.h  crc.h  frame.h  monitor.h  physical_layer.h  system_config.h  transfer_layer.h  watchdog.h
telecommand/src/: buffer.c  telecommand.c  watchdog.c
telecommand/src/coding_layer/: cltu.c  cltu.h  code_block.c  code_block.h  coding_layer.c  crc.c
telecommand/src/command_interface/: ci.c
telecommand/src/monitor_interface/: monitor.c
telecommand/src/physical_layer/: physical_layer.c
telecommand/src/transfer_layer/: clcw.c  transfer_layer.c
telecommand/test/: CMakeLists.txt  README.md  coding_layer_test.c  test_buffer.c  test_cltu.c  test_coding_layer.c  test_crc.c  test_phy_master.c  test_phy_slave.c
telecommand/test/scripts/cmake/: CodeCoverage.cmake
telecommand/tests/: CMakeLists.txt  test_buffer.c  test_cltu.c  test_code_block.c  test_phy_slave.c
telecommand/tests/cmocka/src/: cmocka.c
